# InfoAPI

./: .editorconfig  .gitignore  .php-cs-fixer.dist.php  .poggit.yml  CHANGELOG.md  README.md  builtin-info.md  composer.json  defaults.dot  defaults.md  dump-infos.php  infection.json.dist  phpstan-baseline.neon  phpstan.neon.dist  phpunit.xml  plugin.yml  runTool.php
.github/workflow/: code-doc.yml
.github/workflows/: ci.yml  code-doc.yml  docs.yml  phpdoc.yml  pm.yml
doc/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  style.sass
doc/src/: components.rs  data.rs  lib.rs  main.rs  util.rs
doc/src/components/: editable_select.rs  expr.rs  modal.rs
doc/static/: sources.txt
lib/: api.php  ast.php  context.php  doc.php  ext.php  kind-index.php  mapping-index.php  name.php  parser.php  pathfind.php  reflect.php  registry.php  template.php
lib/defaults/: bool.php  format.php  index.php  number.php  player.php  position.php  string.php  world.php
lib/template/: element.php  get.php  watch.php
shared/: display.php  kind-help.php  mapping.php  registry.php  standard-kinds.php
src/: api.php  ast.php  display.php  doc.php  kind-index.php  mapping.php  name.php  reflect.php  registry.php
src/defaults/: bool.php  format.php  index.php  number.php  string.php
src/shared/: graph.php  info.php  mapping.php  (+4 more)
tests/: AnonInfoTest.php  AstTest.php  CaseInsensitiveTest.php  DefaultsTest.php  DurationInfoTest.php  FallbackTest.php  StringParserTest.php  TemplateTest.php  TimeInfoTest.php  autoload-bootstrap.php
tools/: DocGenerator.php
(+71 files in other folders)
