[package]
name = "doc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
console_error_panic_hook = "0.1.7"
defy = "0.1.5"
futures = "0.3.28"
gloo = { version = "0.9.0", features = ["net"] }
log = "0.4.17"
serde = {version = "1.0.181", features = ["derive"]}
serde_json = "1.0.104"
wasm-logger = "0.2.0"
web-sys = "0.3.64"
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
